--- a/clarity_project/templates/drf_spectacular/swagger_ui.html
+++ b/clarity_project/templates/drf_spectacular/swagger_ui.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <title>Swagger</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//unpkg.com/swagger-ui-dist@3.30.0/swagger-ui.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet"
+          type="text/css"
+          href="//unpkg.com/swagger-ui-dist@3.30.0/swagger-ui.css" />
   </head>
   <body>
     <div id="swagger-ui"></div>
     <script src="//unpkg.com/swagger-ui-dist@3.30.0/swagger-ui-bundle.js"></script>
     <script>
-    const ui = SwaggerUIBundle({
+      const ui = SwaggerUIBundle({
         url: "{{ schema_url }}",
         dom_id: '#swagger-ui',
         presets: [
@@ -18,7 +20,7 @@
           SwaggerUIBundle.SwaggerUIStandalonePreset
         ],
         layout: "BaseLayout",
-        deepLinking:true,
+        deepLinking: true,
         requestInterceptor: (request) => {
           request.headers['X-CSRFToken'] = "{{ csrf_token }}"
           return request;
